Inscription d'un élève à un cours

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -459,7 +459,7 @@
             {% elseif is_granted('ROLE_ELEVE') %}
                 <div class="sidebar-section">Mon Espace</div>
                 <a href="{{ path('app_eleve_mes_cours') }}">📅 Cours</a>
-
+                <a href="{{ path('app_eleve_catalogue_cours') }}">📚 Catalogue des cours</a>
             {% else %}
                 <div class="sidebar-section">Mon Espace</div>
             {% endif %}
