--- a/templates/type_instrument/index.html.twig
+++ b/templates/type_instrument/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}TypeInstrument index{% endblock %}
 
 {% block body %}
-    <h1>TypeInstrument index</h1>
+    <h1>Liste des types d'instruments</h1>
 
     <table class="table">
         <thead>
