--- a/templates/accessoire/index.html.twig
+++ b/templates/accessoire/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Accessoire index{% endblock %}
 
 {% block body %}
-    <h1>Accessoire index</h1>
+    <h1>Liste des accessoires</h1>
 
     <table class="table">
         <thead>
