--- a/templates/instrument/index.html.twig
+++ b/templates/instrument/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Instrument index{% endblock %}
 
 {% block body %}
-    <h1>Instrument index</h1>
+    <h1>Liste des instruments</h1>
 
     <table class="table">
         <thead>
