--- a/templates/classe_instrument/index.html.twig
+++ b/templates/classe_instrument/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}ClasseInstrument index{% endblock %}
 
 {% block body %}
-    <h1>ClasseInstrument index</h1>
+    <h1>Listes des classes Instruments</h1>
 
     <table class="table">
         <thead>
