--- a/templates/eleve/index.html.twig
+++ b/templates/eleve/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Eleve index{% endblock %}
 
 {% block body %}
-    <h1>Eleve index</h1>
+    <h1>Liste des élèves</h1>
 
     <table class="table">
         <thead>
