--- a/templates/professeur/index.html.twig
+++ b/templates/professeur/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Professeur index{% endblock %}
 
 {% block body %}
-    <h1>Professeur index</h1>
+    <h1>Liste des professeurs</h1>
 
     <table class="table">
         <thead>
