--- a/templates/responsable/index.html.twig
+++ b/templates/responsable/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Responsable index{% endblock %}
 
 {% block body %}
-    <h1>Responsable index</h1>
+    <h1>Liste des responsables</h1>
 
     <table class="table">
         <thead>
