--- a/templates/inscription/index.html.twig
+++ b/templates/inscription/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription index{% endblock %}
 
 {% block body %}
-    <h1>Inscription index</h1>
+    <h1>Liste des inscriptions</h1>
 
     <table class="table">
         <thead>
