--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Paiement index{% endblock %}
 
 {% block body %}
-<h1 class="text-3xl font-bold mb-6 text-gray-800">Liste des Paiements</h1>
+<h1 class="text-3xl font-bold mb-6 text-gray-800">Liste des paiements</h1>
 
 <div class="overflow-x-auto bg-white rounded-lg shadow">
     {# Utilisation des classes Tailwind CSS pour un meilleur style #}
