--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des Contrats de Prêt{% endblock %}
 
 {% block body %}
-    <h1 class="text-3xl font-bold mb-6">Liste des Contrats de Prêt</h1>
+    <h1 class="text-3xl font-bold mb-6">Liste des contrats de prêt</h1>
 
     <table class="table min-w-full bg-white shadow-md rounded-lg overflow-hidden">
         <thead>
