--- a/templates/intervention/index.html.twig
+++ b/templates/intervention/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Intervention index{% endblock %}
 
 {% block body %}
-    <h1 class="text-3xl font-bold mb-6">Liste des Interventions</h1>
+    <h1 class="text-3xl font-bold mb-6">Liste des interventions</h1>
 
     <table class="table min-w-full bg-white shadow-md rounded-lg overflow-hidden">
         <thead>
