--- a/templates/planning/global.html.twig
+++ b/templates/planning/global.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Planning Global des Cours{% endblock %}
 
 {% block body %}
-    <h1><i class="fa-solid fa-calendar-alt"></i> Planning Global des Cours</h1>
+    <h1><i class="fa-solid fa-calendar-alt"></i> Planning global des cours</h1>
 
     <div class="planning-table-container">
         
